--- a/.env.local.example
+++ b/.env.local.example
@@ -4,6 +4,15 @@ WORDPRESS_DB_PASSWORD=
 WORDPRESS_DB_HOST=127.0.0.1
 WORDPRESS_TABLE_PREFIX=wp_
 
+# Environment & performance toggles
+WP_ENVIRONMENT_TYPE=local
+WP_CACHE=true
+DISABLE_WP_CRON=true
+SCRIPT_DEBUG=false
+CONCATENATE_SCRIPTS=true
+COMPRESS_CSS=true
+COMPRESS_SCRIPTS=true
+
 # Host/port for the built-in PHP server
 WP_HOST=127.0.0.1
 WP_PORT=8000
