--- a/.github/workflows/deploy-hostinger.yml
+++ b/.github/workflows/deploy-hostinger.yml
@@ -18,13 +18,13 @@ jobs:
       - name: Sync files via rsync over SSH
         uses: easingthemes/ssh-deploy@v4
         with:
-          SSH_PRIVATE_KEY: ${{ secrets.HOSTINGER_SSH_KEY }}
-          REMOTE_HOST: ${{ secrets.HOSTINGER_HOST }}
-          REMOTE_USER: ${{ secrets.HOSTINGER_USERNAME }}
-          REMOTE_PORT: 22
-          SOURCE: ./
-          TARGET: ${{ secrets.HOSTINGER_REMOTE_DIR }}
-          ARGS: >-
+          sshPrivateKey: ${{ secrets.HOSTINGER_SSH_KEY }}
+          remoteHost: ${{ secrets.HOSTINGER_HOST }}
+          remoteUser: ${{ secrets.HOSTINGER_USERNAME }}
+          remotePort: 22
+          source: ./
+          target: ${{ secrets.HOSTINGER_REMOTE_DIR }}
+          args: >-
             -az --delete --delete-excluded
             --exclude='wp-content/uploads/**'
             --exclude='wp-content/cache/**'
