--- a/.github/workflows/deploy-hostinger.yml
+++ b/.github/workflows/deploy-hostinger.yml
@@ -25,7 +25,7 @@ jobs:
           SOURCE: ./
           TARGET: ${{ secrets.HOSTINGER_REMOTE_DIR }}
           ARGS: -az --delete --delete-excluded
-          EXCLUDE: >-
+          EXCLUDE: |
             wp-content/uploads/**
             wp-content/cache/**
             wp-content/upgrade/**
